--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: MPDiR
 Type: Package
-Title: Data sets and scripts for Modeling Psychophysical Data in R
-Version: 0.1-12
-Date: 2012-12-12
+Title: Data sets and scripts for Modeling Psychophysical Data in R.
+Version: 0.1-15
+Date: 2014-03-26
 Author: Kenneth Knoblauch and Laurence T. Maloney
 Maintainer: Ken Knoblauch <ken.knoblauch@inserm.fr>
-Depends: R (>= 2.10), stats, graphics
+Depends: R (>= 3.0.0), stats, graphics
 Suggests: lattice, lme4, lme4.0
 LazyLoad: yes
 LazyData: yes
-Description: Data sets and scripts for Modeling Psychophysical Data in
-        R
+Description: Data sets and scripts for Modeling Psychophysical Data in R (Springer).  The lme4.0 package, used only in conjunction with the polmer function, is available from R-Forge at http://https://r-forge.r-project.org/projects/lme4/
 License: GPL-2
-Packaged: 2012-12-12 08:51:01 UTC; ken
+Packaged: 2014-03-26 09:05:58 UTC; ken
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-12-12 10:29:26
+Date/Publication: 2014-03-26 10:37:36
