--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: MPDiR
 Type: Package
 Title: Data sets and scripts for Modeling Psychophysical Data in R.
-Version: 0.1-15
-Date: 2014-03-26
+Version: 0.1-16
+Date: 2014-12-22
 Author: Kenneth Knoblauch and Laurence T. Maloney
 Maintainer: Ken Knoblauch <ken.knoblauch@inserm.fr>
 Depends: R (>= 3.0.0), stats, graphics
-Suggests: lattice, lme4, lme4.0
+Suggests: lattice
 LazyLoad: yes
 LazyData: yes
-Description: Data sets and scripts for Modeling Psychophysical Data in R (Springer).  The lme4.0 package, used only in conjunction with the polmer function, is available from R-Forge at http://https://r-forge.r-project.org/projects/lme4/
+Description: Data sets and scripts for Modeling Psychophysical Data in R (Springer).
 License: GPL-2
-Packaged: 2014-03-26 09:05:58 UTC; ken
+Packaged: 2014-12-22 16:02:17 UTC; ken
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-03-26 10:37:36
+Date/Publication: 2014-12-22 17:59:49
